# f1-timing-app

./: .gitignore  404.html  BUILD-SPEC.md  index.html  index.txt  package.json  vercel.json
_next/static/chunks/: 397-84f961716f926288.js  45-5349598be12e9daa.js  835-1339b1f58e2e21d0.js  main-ae70df76d68cbe2f.js  main-app-b353c79dfb46e967.js
_next/static/css/: 05566f63e4e73247.css
_next/static/lOVOUg_Iw1F2pbTJBR9Fu/: _ssgManifest.js
data-pipeline/: pyproject.toml  requirements.txt
data-pipeline/src/: models.py
history/: index.html  index.txt
replay/latest/: index.html  index.txt
server/: package.json  tsconfig.json  vitest.config.ts
server/__tests__/: recording.test.ts  replay.test.ts  sessions.test.ts
server/src/: index.ts
server/src/db/: client.ts  schema.sql
server/src/routes/: health.ts  replay.ts  sessions.ts  telemetry.ts
server/src/services/: cache.ts  playback.ts  recording.ts
server/src/ws/: channels.ts  hub.ts
session/latest/: index.html  index.txt
shared/: package.json  tsconfig.json  types.ts
shared/src/: constants.ts  index.ts
web/: .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/history/: page.tsx
web/src/hooks/: useDriverSelection.ts  useF1WebSocket.ts  usePlayback.ts  useSessionData.ts  useTelemetry.ts
web/src/lib/: api.ts  constants.ts  mock-data.ts  shared-types.ts  track-coords.ts  types.ts  utils.ts
web/src/stores/: playback-store.ts  session-store.ts
web/src/test/: setup.ts
(+41 files in other folders)
